--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
         "lint": "eslint  \"./src/**/*.{js,jsx,ts,tsx,json}\"",
         "format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
         "format:check": "prettier --check \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
-        "prepare": "husky install"
+        "prepare": "husky install",
+        "tsc:check": "tsc --noEmit",
+        "test": "jest",
+        "test:watch": "jest --watch"
     },
     "keywords": [],
     "author": "",
@@ -22,6 +25,9 @@
         "@babel/preset-react": "^7.16.7",
         "@babel/preset-typescript": "^7.16.7",
         "@babel/runtime": "^7.17.2",
+        "@testing-library/jest-dom": "^5.16.2",
+        "@testing-library/react": "^12.1.2",
+        "@types/jest": "^27.4.0",
         "@types/react": "^17.0.39",
         "@types/react-dom": "^17.0.11",
         "@typescript-eslint/eslint-plugin": "^5.11.0",
@@ -37,13 +43,16 @@
         "eslint-plugin-react": "^7.28.0",
         "eslint-plugin-react-hooks": "^4.3.0",
         "html-webpack-plugin": "^5.5.0",
+        "husky": "^8.0.0",
+        "jest": "^27.5.1",
         "prettier": "^2.5.1",
         "style-loader": "^3.3.1",
+        "ts-jest": "^27.1.3",
+        "ts-node": "^10.5.0",
         "typescript": "^4.5.5",
         "webpack": "^5.68.0",
         "webpack-cli": "^4.10.0",
-        "webpack-dev-server": "^4.7.4",
-        "husky": "^8.0.0"
+        "webpack-dev-server": "^4.7.4"
     },
     "dependencies": {
         "react": "^17.0.2",
