--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -23,3 +23,12 @@ jobs:
                   npm run tsc:check
             - name: Tests
               run: npm run test
+            - name: Deploy to Netlify
+              uses: actions/checkout@master
+            - name: Publish
+              uses: netlify/actions/cli@master
+              with:
+                  args: deploy --dir=dist
+              env:
+                  NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+                  NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
