--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,9 +26,9 @@ jobs:
             - name: Build production website
               run: npm run build
             - name: Deploy to Netlify
-              uses: actions/checkout@main
+              uses: actions/checkout@master
             - name: Publish
-              uses: netlify/actions/cli@main
+              uses: netlify/actions/cli@master
               with:
                   args: deploy --dir=dist --prod
               env:
