--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@babel/runtime": "^7.17.2",
         "@testing-library/jest-dom": "^5.16.2",
         "@testing-library/react": "^12.1.2",
+        "@testing-library/user-event": "^14.0.0-beta.11",
         "@types/jest": "^27.4.0",
         "@types/react": "^17.0.39",
         "@types/react-dom": "^17.0.11",
@@ -55,6 +56,9 @@
         "webpack-dev-server": "^4.7.4"
     },
     "dependencies": {
+        "@emotion/react": "^11.8.1",
+        "@emotion/styled": "^11.8.1",
+        "@mui/material": "^5.4.3",
         "react": "^17.0.2",
         "react-dom": "^17.0.2"
     }
