--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -16,7 +16,7 @@ jobs:
                   node-version: '16'
             - name: install dependencies
               run: npm ci
-            - name: formatting and linting
+            - name: Formatting and linting
               run: |
                   npm run format:check
                   npm run lint
@@ -26,8 +26,6 @@ jobs:
             - name: Build production website
               run: npm run build
             - name: Deploy to Netlify
-              uses: actions/checkout@master
-            - name: Publish
               uses: netlify/actions/cli@master
               with:
                   args: deploy --dir=dist --prod
